apps/k8s-io/gateway-canary.yaml
# Copyright 2024 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s-io
  namespace: k8s-io-canary
  labels:
    app: k8s-io
  annotations:
    networking.gke.io/load-balancer-ip-addresses: k8s-io-ingress-canary
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: k8s-io-tls
        kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s-io-v6
  namespace: k8s-io-canary
  labels:
    app: k8s-io
  annotations:
    networking.gke.io/load-balancer-ip-addresses: k8s-io-ingress-canary-v6
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: k8s-io-tls
        kind: Secret
