apps/k8s-io/ingress-canary-v6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-io-v6
  labels:
    app: k8s-io
  namespace: k8s-io-canary
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-io-ingress-canary-v6
spec:
  defaultBackend:
    service:
      name: k8s-io
      port:
        name: http
  tls:
  - secretName: testsecret-tls
